kubernetes/pod/yaml/hello-world.yaml
apiVersion: v1
kind: Pod
# Pod的元数据
metadata:
  # 名称
  name: simpleweb-v1
  # 命名空间，默认是：default
  namespace: default
# pod内容的实际说明
spec:
  # 容器列表
  containers:
  - image: codelieche/simpleweb:v1  # 容器的镜像
    name: simpleweb  # 容器的名称
    # 应用监听的端口
    ports:
    - containerPort: 8080  # 端口号
      protocol: TCP        # 协议
