kubernetes/pod/yaml/simpleweb-hostip-fix.yaml
apiVersion: v1
kind: Pod
metadata:
  name: simpleweb
  labels:
    app: simpleweb
spec:
  hostNetwork: true        # 使用宿主机节点的网络命名空间，默认是false
  containers:
  - name: simpleweb
    image: codelieche/simpleweb:v1
