kubernetes/pod/yaml/simpleweb-volume-nfs.yaml
# 定义pod资源
apiVersion: v1
kind: Pod
metadata:
  name: simpleweb
  labels:
    app: simpleweb
spec:
  containers:
  - name: simpleweb
    image: codelieche/simpleweb:v1
    ports:
    - containerPort: 8080
      protocol: TCP
    volumeMounts:
    - name: data
      mountPath: /data
  volumes:
  - name: data
    persistentVolumeClaim:
      claimName: simpleweb-pvc     # 在pod中使用PVC的名字
